# NexusAgents

./: .mcp.json  MEMO.md  README.md
nexus/: .gitignore  MEMO.md  README.md  cli.py  conftest.py  pyproject.toml
nexus/agent/core/: context.py  cost.py  errors.py  observability.py  orchestrator.py  parallel.py  retry.py  state.py
nexus/agent/subagents/: alerting.py  backend_builder.py  base.py  frontend_builder.py  infra.py  planner.py
nexus/agent/tools/: __init__.py  registry.py
nexus/agent/tools/alert/: tools.py
nexus/agent/tools/aws/: tools.py
nexus/agent/tools/code/: tools.py
nexus/agent/tools/docker/: tools.py
nexus/agent/tools/k8s/: tools.py
nexus/agent/tools/plan/: tools.py
nexus/agent/tools/subagent/: tools.py
nexus/agent/tools/test/: tools.py
nexus/eval/: harness.py
nexus/eval/cases/: basic_saas.py
nexus/spec/: openapi.yaml
nexus/templates/: docker-compose.yml.j2
nexus/templates/fastapi/: admin.py.j2  auth.py.j2  database.py.j2  main.py.j2  model.py.j2  route.py.j2
nexus/templates/k8s/: deployment.yaml.j2  ingress.yaml.j2  migration-job.yaml.j2  service.yaml.j2
nexus/templates/react/: AdminDashboard.tsx.j2  App.tsx.j2  AuthContext.tsx.j2  Dockerfile.j2  Login.tsx.j2  api.ts.j2  page.tsx.j2
nexus/tests/integration/: test_build_phase.py  test_planning_phase.py
nexus/tests/unit/: test_context.py  test_cost.py  test_errors.py  test_eval_harness.py  test_observability.py  test_parallel.py  test_registry.py  test_retry.py  test_state.py  test_subagent_base.py
nexus/tests/unit/tools/: test_alert_tools.py  test_aws_tools.py  (+7 more)
(+3 files in other folders)
