[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "kubernetes>=31.0.0",
    "docker>=7.0.0",
    "jinja2>=3.1.0",
    "pydantic>=2.9.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "moto[all]>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "playwright>=1.47.0",
]

[project.scripts]
nexus = "cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["agent", "eval", "templates"]

[tool.ruff]
line-length = 100
target-version = "py311"
